# grebe

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
apps/bench/: bench_udp.cpp  bench_udp.h  main.cpp
apps/common/ipc/: udp_transport.cpp  udp_transport.h
apps/common/stages/: transport_rx_stage.cpp  transport_rx_stage.h  transport_tx_stage.cpp  transport_tx_stage.h
apps/sg/: data_generator.h  file_reader.cpp  file_reader.h  sg_main.cpp
apps/viewer/: app_command.cpp  app_command.h  app_loop.cpp  app_loop.h  benchmark.cpp  benchmark.h  buffer_manager.cpp  buffer_manager.h  cli.cpp  cli.h  compute_decimator.cpp  hud.cpp  hud.h  ipc_source.cpp  main.cpp  microbench.cpp  process_handle.h  profiler.cpp  profiler.h  transport_source.cpp  transport_source.h  vulkan_context.cpp  vulkan_renderer.cpp  vulkan_renderer.h
doc/: INTEGRATION.md  RDD.md  TI-08-Codex-Review.md  TI-phase7.md  TI-phase9.1.md  TI-phase9.2.md  TODO.md  TR-001.md  TR-002.md  bottleneck_analysis.md  technical_judgment.md
include/grebe/: batch.h  config.h  data_source.h  decimation_engine.h  frame.h  grebe.h  queue.h  render_backend.h  runtime.h  stage.h  telemetry.h
scripts/: build-windows.sh  generate_grb.py  regression-test.sh  run-windows.sh  setup-windows.sh  test-udp.sh
shaders/: minmax_decimate.comp  waveform.frag  waveform.vert
src/: app_loop.cpp  app_loop.h  benchmark.cpp  benchmark.h  buffer_manager.cpp  buffer_manager.h  cli.cpp  cli.h  compute_decimator.cpp  compute_decimator.h  data_generator.cpp  data_generator.h  decimation_engine.cpp  decimation_thread.cpp  decimation_thread.h  decimator.cpp  decimator.h  drop_counter.h  envelope_verifier.cpp  envelope_verifier.h  hud.cpp  hud.h  ingestion_thread.cpp  ingestion_thread.h  ipc_source.cpp  ipc_source.h  main.cpp  microbench.h  process_handle.cpp  process_handle.h  profiler.cpp  profiler.h  renderer.cpp  renderer.h  ring_buffer.h  ring_buffer_view.h  sg_main.cpp  swapchain.cpp  swapchain.h  synthetic_source.cpp  (+6 more)
src/core/: in_process_queue.cpp  in_process_queue.h  linear_runtime.cpp  linear_runtime.h
src/ipc/: contracts.h  pipe_transport.cpp  pipe_transport.h  transport.h
src/stages/: data_source_adapter.cpp  data_source_adapter.h  decimation_stage.cpp  decimation_stage.h  visualization_stage.cpp  visualization_stage.h
